# easy_smart_agent

./: .gitignore  README.md  pyproject.toml
src/example/: __init__.py  dto.py  main.py
src/example/config/: embedder.py  logger.py
src/example/crews/example/: crew.py
src/example/crews/example/config/: agents.yaml  tasks.yaml
src/example/crews/example_with_embeddings/: crew.py
src/example/crews/example_with_embeddings/config/: agents.yaml  tasks.yaml
src/example/services/: embed_service.py
src/mariza/config/: logger.py
src/mariza/crews/artigo/: crew.py
src/mariza/crews/artigo/config/: agents.yaml  tasks.yaml
src/mariza/crews/concurso/: crew.py
src/mariza/crews/concurso/config/: agents.yaml  tasks.yaml
src/mariza/crews/envolvido/: crew.py
src/mariza/crews/envolvido/config/: agents.yaml  tasks.yaml
src/mariza/crews/resumo/: crew.py
src/mariza/crews/resumo/config/: agents.yaml  tasks.yaml
src/mariza/services/: embed_service.py  extract_service.py  ocr_service.py
