[project]
name = "mariza"
version = "0.1.0"
description = "Mariza Smart Assistant"
authors = [{ name = "Richardson Bessa", email = "richardsonlbessa@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0",
    "docling>=2.48.0",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
]

[project.scripts]
mariza = "mariza.main:run"
run_crew = "mariza.main:run"
train = "mariza.main:train"
replay = "mariza.main:replay"
test = "mariza.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
